switch to java 16 and update jackon and apacheCommon libraries - Schemas classes have been renamed - Fix merging file and sfc functions - lot of perf impromevemnts on CollecTransform functions - add randomPointsInPolygon